<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true">


        <!-- logo-->
        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:id="@+id/logo"
                android:src="@mipmap/logo_provisional"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_message_init_login"
                android:id="@+id/tip2_text"
                android:textColor="@color/facebook"
                android:layout_marginTop="8dp"

                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <!-- social login-->
        <LinearLayout
            android:id="@+id/layout_social"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_below="@+id/layout_logo"
            android:layout_height="wrap_content">

            <!--facebook -->



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin1"
                android:layout_marginBottom="@dimen/activity_horizontal_margin1"
                android:layout_weight="1"
                android:onClick="onFblogin"
                android:clickable="true"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:tint="@color/com_facebook_blue"
                        android:layout_gravity="center|start"
                        android:src="@drawable/com_facebook_button_icon"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin1"
                        android:layout_width="@dimen/list_item_category_size"
                        android:layout_height="@dimen/list_item_category_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/facebook_title"
                        android:textColor="@color/com_facebook_blue"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textAppearance="@style/com_facebook_loginview_default_style"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <!--google -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin1"
                android:layout_marginBottom="@dimen/activity_horizontal_margin1"
                android:layout_weight="1"
                android:id="@+id/btn_sign_in"
                android:clickable="true"
                android:gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center|start"
                        android:src="@mipmap/google_icon"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin1"
                        android:layout_width="@dimen/list_item_category_size"
                        android:layout_height="@dimen/list_item_category_size" />

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/google_plus_title"
                        android:textColor="@color/google_plus"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textAppearance="@style/com_facebook_loginview_default_style"
                        android:layout_height="wrap_content" />
                    <!-- Datos del login no visible -->
                    <LinearLayout
                        android:id="@+id/llProfile"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/imgProfilePic"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical"
                            android:layout_weight="2" >

                            <TextView
                                android:id="@+id/txtName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:textSize="20dp" />

                            <TextView
                                android:id="@+id/txtEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:textSize="18dp" />
                        </LinearLayout>
                    </LinearLayout>
                    <!-- Buttons no disponible -->
                    <Button
                        android:id="@+id/btn_sign_out"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_logout_from_google"
                        android:visibility="gone"
                        android:layout_marginBottom="10dp"/>
                    <Button
                        android:id="@+id/btn_revoke_access"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_revoke_access"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>

            <!-- google button
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin1"
                android:layout_marginBottom="@dimen/activity_horizontal_margin1"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/llProfile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/imgProfilePic"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical"
                        android:layout_weight="2" >

                        <TextView
                            android:id="@+id/txtName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/txtEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textSize="18dp" />
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:buttonSize="standart"
                    app:colorScheme="light"
                    />

                <Button
                    android:id="@+id/btn_sign_out"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_logout_from_google"
                    android:visibility="gone"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/btn_revoke_access"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_revoke_access"
                    android:visibility="gone" />

            </LinearLayout>
            -->

        </LinearLayout>
        <!-- division-->
        <LinearLayout
            android:id="@+id/layout_division"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_below="@+id/layout_social"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@color/gray_ligth" />
            <TextView
                android:layout_width="wrap_content"
                android:text="O"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@color/gray_ligth" />

        </LinearLayout>

        <!-- form-->
        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_division"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <!--                                            email app:met_maxCharacters="20"-->

                <EditText
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                 />


                <!--                                            password -->

                <EditText
                    android:id="@+id/text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_pwd"
                    android:imeActionId="@+id/login"
                    android:inputType="textPassword"
                   />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_show_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/negro_semitransparente"
                    android:text="@string/prompt_show_password"
                    />

            </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_below="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <!--                                       button ingresar -->

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:showDividers="middle"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />
            </LinearLayout>
            <!--                                       button registrar -->
            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:weightSum="100"
                android:showDividers="middle"
                android:background="@color/colorSecondary"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_signup"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/white"
                    android:text="@string/prompt_button_signup"
                    android:textStyle="bold" />
                </LinearLayout>
            <!--                        seccion recuperar contraseña y registrar como empresa-->

            <TextView
                android:id="@+id/link_password"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/prompt_link_password"
                android:autoLink="all"
                android:linksClickable="true"
                android:clickable="true"
                android:padding="16dp"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />


            <!--<com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                /> -->


        </LinearLayout>




</RelativeLayout>
</ScrollView>
